# cartog

./: .cartog.toml.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  agents.md  deny.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  skill-tests.yml
agents/: codebase-onboarding.md  refactoring-scout.md
agents/tests/: eval.sh  golden_examples.yaml
benches/: queries.rs
benchmarks/: README.md
benchmarks/fixtures/: gen_java.py
benchmarks/fixtures/webapp_java/: Main.java
benchmarks/fixtures/webapp_java/api/v1/: AuthController.java
benchmarks/fixtures/webapp_java/api/v2/: AuthController.java
benchmarks/fixtures/webapp_java/auth/: AdminService.java  AuthProvider.java  AuthService.java  TokenClaims.java  TokenService.java  User.java
benchmarks/fixtures/webapp_java/database/: ConnectionHandle.java  ConnectionPool.java  DatabaseConnection.java  SessionQueries.java  UserQueries.java
benchmarks/fixtures/webapp_java/errors/: AppException.java  AuthenticationException.java  ExpiredTokenException.java  PaymentException.java  TokenException.java  ValidationException.java
benchmarks/fixtures/webapp_java/middleware/: AuthMiddleware.java  RateLimitMiddleware.java
benchmarks/fixtures/webapp_java/models/: PaymentModel.java  SessionModel.java  UserModel.java  UserRole.java
benchmarks/fixtures/webapp_java/routes/: AuthRoutes.java  UserRoutes.java
benchmarks/fixtures/webapp_java/services/: AuthenticationService.java  BaseService.java  SessionService.java  UserService.java
benchmarks/fixtures/webapp_java/services/payment/: PaymentGateway.java  PaymentProcessor.java
benchmarks/fixtures/webapp_java/tasks/: CleanupTask.java  EmailTask.java
benchmarks/fixtures/webapp_java/util/: LogLevel.java  Logger.java
benchmarks/fixtures/webapp_java/validators/: CommonValidator.java  PaymentValidator.java  UserValidator.java
benchmarks/fixtures/webapp_rs/: Cargo.toml
benchmarks/ground_truth/: webapp_java.json
crates/cartog/: Cargo.toml  README.md  build.rs
crates/cartog-core/: Cargo.toml  README.md
crates/cartog-core/src/: lib.rs
crates/cartog-db/: Cargo.toml  README.md
crates/cartog-db/src/: lib.rs
crates/cartog-indexer/: Cargo.toml  README.md
crates/cartog-indexer/benches/: indexing.rs
crates/cartog-indexer/src/: lib.rs
crates/cartog-languages/: Cargo.toml  README.md
crates/cartog-languages/src/: go.rs  java.rs  javascript.rs  js_shared.rs  lib.rs  markdown.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs
crates/cartog-lsp/: Cargo.toml  README.md
crates/cartog-lsp/src/: client.rs  lib.rs  manager.rs  servers.rs
crates/cartog-mcp/: Cargo.toml  README.md
crates/cartog-mcp/src/: lib.rs
crates/cartog-process-lock/: Cargo.toml
crates/cartog-process-lock/src/: lib.rs
crates/cartog-rag/: Cargo.toml  README.md
crates/cartog-rag/src/: embeddings.rs  indexer.rs  lib.rs  provider.rs  search.rs  setup.rs
crates/cartog-rag/src/providers/: local.rs  mod.rs  ollama.rs
crates/cartog-watch/: Cargo.toml  README.md
crates/cartog-watch/src/: lib.rs
crates/cartog-watch/tests/: pid_file_test.rs
crates/cartog/benches/: queries.rs
crates/cartog/src/: auto_check.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  state.rs  time_fmt.rs
crates/cartog/src/commands/: mod.rs  self_cmd.rs
crates/cartog/tests/: auto_check_test.rs  process_lock_test.rs  rag_relevancy.rs  self_update_test.rs
docs/: README.md  editor-integration.md  product.md  spec-watch.md  structure.md  tech.md  troubleshooting.md  updates.md  usage.md
docs/architecture/: incremental-indexing.md
scripts/: release.sh
site/: index.html  style.css  usage.html
skills/cartog/: SKILL.md
skills/cartog/references/: query_cookbook.md  supported_languages.md
skills/cartog/scripts/: ensure_indexed.sh  install.sh  update_on_exit.sh
skills/cartog/tests/: eval.sh  golden_examples.yaml  test_ensure_indexed.sh  test_install.sh  test_update_on_exit.sh
src/: cli.rs  commands.rs  config.rs  db.rs  indexer.rs  lib.rs  main.rs  mcp.rs  types.rs  watch.rs
src/languages/: go.rs  java.rs  javascript.rs  js_shared.rs  mod.rs  python.rs  queries.rs  ruby.rs  rust_lang.rs  typescript.rs
src/lsp/: client.rs  mod.rs
src/rag/: embeddings.rs  indexer.rs  mod.rs  reranker.rs  search.rs
tests/: rag_relevancy.rs
