[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.10.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/jrollin/cartog"

[workspace.dependencies]
# Internal crates (path + version required for publishing)
cartog-core = { path = "crates/cartog-core", version = "0.10.1" }
cartog-db = { path = "crates/cartog-db", version = "0.10.1" }
cartog-languages = { path = "crates/cartog-languages", version = "0.10.1" }
cartog-indexer = { path = "crates/cartog-indexer", version = "0.10.1" }
cartog-rag = { path = "crates/cartog-rag", version = "0.10.1" }
cartog-lsp = { path = "crates/cartog-lsp", version = "0.10.1" }
cartog-watch = { path = "crates/cartog-watch", version = "0.10.1" }
cartog-mcp = { path = "crates/cartog-mcp", version = "0.10.1" }

# Shared external dependencies
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
walkdir = "2"
sha2 = "0.10"
notify = "8"
notify-debouncer-mini = "0.7"
ctrlc = "3"
clap = { version = "4", features = ["derive", "env"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.release]
lto = "thin"
strip = "debuginfo"

# opt-level=1 because tree-sitter C grammars compile very slowly at the default level=0
[profile.dev]
opt-level = 1
