[package]
name = "cartog-mcp"
description = "MCP server for cartog code graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartog-core = { workspace = true }
cartog-db = { workspace = true }
cartog-indexer = { workspace = true }
cartog-rag = { workspace = true }
cartog-watch = { workspace = true }
cartog-lsp = { workspace = true, optional = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
lsp = ["dep:cartog-lsp", "cartog-indexer/lsp"]
