[package]
name = "cartog-rag"
description = "Semantic search and RAG pipeline for cartog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["provider-local"]
provider-local = ["dep:fastembed"]
provider-ollama = ["dep:reqwest", "dep:serde_json"]

[dependencies]
cartog-core = { workspace = true }
cartog-db = { workspace = true }
anyhow = { workspace = true }
fastembed = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true }
